--- a/LinkFinder/app/src/main/res/layout/content_main.xml
+++ b/LinkFinder/app/src/main/res/layout/content_main.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView android:id="@+id/item_list"
-                                        android:name="com.dleal.linkfinder.ItemListFragment"
-                                        xmlns:android="http://schemas.android.com/apk/res/android"
-                                        xmlns:app="http://schemas.android.com/apk/res-auto"
-                                        xmlns:tools="http://schemas.android.com/tools"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:layout_marginLeft="16dp"
-                                        android:layout_marginRight="16dp"
-                                        app:layoutManager="LinearLayoutManager"
-                                        tools:context=".component.main.MainActivity"
-                                        tools:listitem="@layout/item_list_content"/>
+<LinearLayout
+    style="@style/match"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical">
+
+    <TextView
+        style="@style/mainTitle"
+        android:text="@string/main_text_website_title"/>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_user"
+        style="@style/editWebsiteContainer">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/edit_login_user"
+            style="@style/editWebsite"
+            android:hint="@string/main_edit_website_hint"
+            android:text="@string/default_website"/>
+
+    </android.support.design.widget.TextInputLayout>
+</LinearLayout>
