--- a/LinkFinder/app/src/main/res/values/dimens.xml
+++ b/LinkFinder/app/src/main/res/values/dimens.xml
@@ -4,4 +4,14 @@
     <dimen name="app_bar_height">200dp</dimen>
     <dimen name="item_width">200dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+
+    <!-- Main activity -->
+    <dimen name="main_title_text_size">20sp</dimen>
+    <dimen name="main_title_top_margin">20dp</dimen>
+    <dimen name="main_title_bottom_margin">20dp</dimen>
+    
+    <dimen name="edit_website_container_horizontal_margin">40dp</dimen>
+
+    <dimen name="edit_website_text_size">16sp</dimen>
+    <dimen name="edit_website_bottom_margin">20dp</dimen>
 </resources>
