--- a/LinkFinder/app/src/main/res/layout/activity_main.xml
+++ b/LinkFinder/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
     </FrameLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/btn_main_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
