--- a/LinkFinder/app/src/main/res/layout/activity_main.xml
+++ b/LinkFinder/app/src/main/res/layout/activity_main.xml
@@ -40,5 +40,11 @@
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_get_app_white_48dp"/>
 
+    <WebView
+        android:id="@+id/webview"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"/>
+
 
 </android.support.design.widget.CoordinatorLayout>
