--- a/LinkFinder/app/src/main/res/values/colors.xml
+++ b/LinkFinder/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="gray_f2">#F2F2F2</color>
+    <color name="gray_a3">#A3A3A3</color>
 </resources>
